# socketio_chatting

./: Cargo.toml
src/: main.rs
static/: index.html
